# ChangeLog for app-editors/tea
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/tea/ChangeLog,v 1.64 2013/08/21 14:19:20 kensington Exp $

*tea-36.0.2 (21 Aug 2013)

  21 Aug 2013; Michael Palimaka <kensington@gentoo.org> +tea-36.0.2.ebuild,
  -tea-33.3.0.ebuild:
  Version bump. Remove old.

*tea-36.0.1 (24 Jun 2013)

  24 Jun 2013; Michael Palimaka <kensington@gentoo.org> +tea-36.0.1.ebuild,
  metadata.xml:
  Version bump. Update upstream metadata.

  02 Mar 2013; Markos Chandras <hwoarang@gentoo.org> tea-33.3.0.ebuild:
  Move Qt dependencies to the new category

  04 Jan 2013; Davide Pesavento <pesa@gentoo.org> -tea-33.2.0.ebuild,
  tea-33.3.0.ebuild:
  EAPI=5 and l10n.eclass; remove old.

*tea-33.3.0 (18 Sep 2012)

  18 Sep 2012; Davide Pesavento <pesa@gentoo.org> +tea-33.3.0.ebuild,
  -tea-33.1.0.ebuild:
  Version bump, remove old.

  03 Aug 2012; Michael Palimaka <kensington@gentoo.org> metadata.xml:
  Add upstream metadata.

*tea-33.2.0 (02 Aug 2012)

  02 Aug 2012; Davide Pesavento <pesa@gentoo.org> +tea-33.2.0.ebuild,
  -tea-33.0.0.ebuild:
  Version bump.

*tea-33.1.0 (01 Jun 2012)

  01 Jun 2012; Michael Palimaka <kensington@gentoo.org> +tea-33.1.0.ebuild,
  -tea-32.0.2.ebuild:
  Version bump, remove old.

  02 May 2012; Davide Pesavento <pesa@gentoo.org> tea-32.0.2.ebuild:
  Migrate to virtual/pkgconfig.

*tea-33.0.0 (02 May 2012)

  02 May 2012; Davide Pesavento <pesa@gentoo.org> +tea-33.0.0.ebuild,
  -tea-32.0.1.ebuild:
  Version bump.

*tea-32.0.2 (24 Apr 2012)

  24 Apr 2012; Johannes Huber <johu@gentoo.org> +tea-32.0.2.ebuild,
  -tea-31.2.0.ebuild, -tea-32.0.0.ebuild:
  Version bump, remove old.

*tea-32.0.1 (16 Mar 2012)

  16 Mar 2012; Davide Pesavento <pesa@gentoo.org> +tea-32.0.1.ebuild,
  -files/tea-17.5.4-forced-cflags-and-compiler-warnings.patch,
  -tea-17.6.6.ebuild, metadata.xml:
  Version bump, #407915 by Michael (kensington). Remove old.

*tea-32.0.0 (16 Mar 2012)
