@@ -1,6 +1,12 @@
 # ChangeLog for app-editors/tea
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/tea/ChangeLog,v 1.64 2013/08/21 14:19:20 kensington Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-editors/tea/ChangeLog,v 1.65 2015/04/08 14:03:00 pesa Exp $
+
+*tea-41.0.0 (08 Apr 2015)
+
+  08 Apr 2015; Davide Pesavento <pesa@gentoo.org> +tea-41.0.0.ebuild,
+  -tea-36.0.1.ebuild:
+  Version bump (bug 545794).
 
 *tea-36.0.2 (21 Aug 2013)
 
